# serial-scope

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  purge-gh123778-release-cache.yml  release.yml
docs/: release-checklist.md
examples/: serial_plot_template.c
packaging/linux/: package-linux.sh  serial-scope.desktop
packaging/macos/: package-macos.sh
packaging/windows/: package-windows.bat  serial-scope.iss
src/: app.rs  config.rs  main.rs  update.rs
src/parser/: line_parser.rs  mod.rs
src/serial/: manager.rs  mod.rs  protocol.rs  types.rs
src/ui/: mod.rs  panel_shell.rs  plot_panel.rs  receive_panel.rs  send_panel.rs  top_bar.rs
