[package]
name = "serial-scope"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
crossbeam-channel = "0.5"
eframe = { version = "0.29", default-features = true }
egui = "0.29"
egui_plot = "0.29"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serialport = "4"
toml = "0.8"
fontdb = "0.16"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
