[package]
name = "serial-scope"
version = "0.2.4"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
crossbeam-channel = "0.5"
eframe = { version = "0.29", default-features = true }
egui = "0.29"
egui_plot = "0.29"
hex = "0.4"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
self_update = { version = "0.43", default-features = false, features = [
  "reqwest",
  "archive-tar",
  "archive-zip",
  "compression-flate2",
  "compression-zip-deflate",
  "rustls"
] }
serialport = "4"
toml = "0.8"
fontdb = "0.16"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.15"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging"
] }
